--------------------------------------------------------------------------------
yjh 2023-10-11 00:41:58+03:00 - build 6201

1. SQLite v3.43.2

--------------------------------------------------------------------------------
drkns 2023-10-10 07:08:40+01:00 - build 6200

1. And again.

--------------------------------------------------------------------------------
drkns 2023-10-09 23:16:20+01:00 - build 6199

1. Correction of 6198.

--------------------------------------------------------------------------------
drkns 2023-10-09 17:17:17+01:00 - build 6198

1. M#3968, M#3992, forum: Error 0x000003EC when opening empty file shares with non-ASCII names.

--------------------------------------------------------------------------------
drkns 2023-10-05 22:00:00+01:00 - build 6197

1. Add "default color" concept.
   In VT renderer "default" is SGR 39/49.
   In classic renderer "default" is whatever was active in the console initially.

2. COL_COMMANDLINE, COL_COMMANDLINEPREFIX, COL_COMMANDLINEUSERSCREEN use "default" by default.

--------------------------------------------------------------------------------
drkns 2023-09-28 17:14:11+01:00 - build 6196

1. Continue 6185.

--------------------------------------------------------------------------------
drkns 2023-09-24 20:39:46+01:00 - build 6195

1. Continue 6185.

--------------------------------------------------------------------------------
drkns 2023-09-21 19:24:08+01:00 - build 6194

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-09-19 22:13:20+01:00 - build 6193

1. Refactoring, more tests.

2. BD-RW -> BD-RE.

--------------------------------------------------------------------------------
drkns 2023-09-14 02:49:00+01:00 - build 6192

1. Workaround for gh-727 and related minor fixes.

--------------------------------------------------------------------------------
drkns 2023-09-13 20:28:17+01:00 - build 6191
