@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2023-10-11 01:27:28+01:00 - build 6202
+
+1. Properly update copy progress when skipping files.
+
+--------------------------------------------------------------------------------
 yjh 2023-10-11 00:41:58+03:00 - build 6201
 
 1. SQLite v3.43.2
